# slack-mcp

./: .banditrc  .gitignore  .pylintrc  AGENTS.md  README.md  pyproject.toml
docs/: api-reference.md  configuration-schema.md  implementation.md  slack-manifest.md
slack_mcp/: __init__.py  __main__.py  config.py  conversations_manager.py  files_manager.py  mcp_server.py  server.py  slack_client.py  users_manager.py  workspace_manager.py  workspace_operations.py
tests/: __init__.py  conftest.py  test_conversations_manager.py  test_files_manager.py  test_slack_client.py  test_users_manager.py  test_workspace_manager_enhanced.py  test_workspace_operations.py
